--- a/deployment/terraform-ansible/templates/broker.conf
+++ b/deployment/terraform-ansible/templates/broker.conf
@@ -28,7 +28,7 @@ zookeeperServers={{ zookeeper_servers }}
 globalZookeeperServers={{ zookeeper_servers }}
 
 # Hostname or IP address the service advertises to the outside world. If not set, the value of InetAddress.getLocalHost().getHostName() is used.
-advertisedAddress={{ hostvars[inventory_hostname].private_ip }}
+advertisedAddress={{ hostvars[inventory_hostname].public_ip }}
 
 # Name of the cluster to which this broker belongs to
 clusterName=local
