Introduce `functioncache` and `functioncontainer` (#9)
* Introduce `functioncache` and `functioncontainer`

- introduce `functioncache` for managing function dependencies (e.g. setting up function class loader and its classpath). The `functioncache` is shared across multiple instances.
- introduce `functioncontainer` for providing a runtime environment to invoke functions.
- provide a thread based `functioncontainer` implementation, which uses functioncache to load classpath and initial its function class loader.

* Revert FunctionID/InstanceID to String

* Add test cases for functioncache and functioncontainer

--- a/pulsar-functions/src/test/resources/test_function_config.yml
+++ b/pulsar-functions/src/test/resources/test_function_config.yml
@@ -18,5 +18,6 @@
 #
 
 name: test-function
+className: org.apache.pulsar.functions.test.TestFunction
 sourceTopic: test-source-topic
 sinkTopic: test-sink-topic
