--- a/pulsar-functions/api/pom.xml
+++ b/pulsar-functions/api/pom.xml
@@ -21,20 +21,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
   <parent>
     <groupId>org.apache.pulsar</groupId>
-    <artifactId>pulsar</artifactId>
+    <artifactId>pulsar-functions-parent</artifactId>
     <version>1.22.0-incubating-SNAPSHOT</version>
   </parent>
 
-  <artifactId>pulsar-functions-parent</artifactId>
-  <name>Pulsar Functions :: Parent</name>
+  <artifactId>pulsar-functions-api</artifactId>
+  <name>Pulsar Functions :: API</name>
 
-  <modules>
-    <module>api</module>
-    <module>runtime</module>
-    <module>api-examples</module>
-  </modules>
+  <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
