--- a/pulsar-functions/runtime/pom.xml
+++ b/pulsar-functions/runtime/pom.xml
@@ -23,7 +23,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.pulsar</groupId>
-    <artifactId>pulsar-functions-parent</artifactId>
+    <artifactId>pulsar-functions</artifactId>
     <version>1.22.0-incubating-SNAPSHOT</version>
   </parent>
 
