--- a/deployment/terraform-ansible/deploy-pulsar.yaml
+++ b/deployment/terraform-ansible/deploy-pulsar.yaml
@@ -23,7 +23,7 @@
   become: true
   tasks:
     - command: >
-      tuned-adm profile latency-performance
+        tuned-adm profile latency-performance
     - name: Create and mount disks
       mount:
         path: "{{ item.path }}"
@@ -60,7 +60,7 @@
 
     - name: Download Pulsar binary package
       unarchive:
-        src: http://apache.mirrors.hoobly.com/incubator/pulsar/pulsar-{{ pulsar_version }}/apache-pulsar-{{ pulsar_version }}-bin.tar.gz
+        src: http://archive.apache.org/dist/incubator/pulsar/pulsar-{{ pulsar_version }}/apache-pulsar-{{ pulsar_version }}-bin.tar.gz
         remote_src: yes
         dest: /opt/pulsar
         extra_opts: ["--strip-components=1"]
@@ -104,12 +104,13 @@
       template:
         src: "../templates/zookeeper.service"
         dest: "/etc/systemd/system/zookeeper.service"
-    - name: Systemd ZooKeeper start
+    - name: systemd ZooKeeper start
       systemd:
         state: restarted
         daemon_reload: yes
         name: "zookeeper"
-    - shell: |
+    - name: Initialize cluster metadata
+      shell: |
         bin/pulsar initialize-cluster-metadata \
           --cluster {{ cluster_name }} \
           --zookeeper localhost:2181 \
