Added Submit Function capability to the pulsar-functions cli (#33)
* Create pulsar-functions module (#1)

* Create pulsar-functions module

* rename `sdk` package to `api`

* Added the first cut of the Java interface for Pulsar functions (#2)

* Added the first cut of the pulsar submit

* Working

--- a/pulsar-functions/conf/example.yml
+++ b/pulsar-functions/conf/example.yml
@@ -17,7 +17,7 @@
 # under the License.
 #
 
+tenant: "test"
 nameSpace: "test"
-userName: "test"
 name: "example"
 className: "org.apache.pulsar.functions.api.examples.ExclamationFunction"
