Provide a jmh benchmark to benchmark thread container (#39)
* Provide a jmh benchmark to benchmark thread container

* Rebased to latest master

* revert the scripts

--- a/pulsar-functions/pom.xml
+++ b/pulsar-functions/pom.xml
@@ -35,6 +35,7 @@
     <module>api</module>
     <module>runtime</module>
     <module>api-examples</module>
+    <module>runtime-benchmark</module>
   </modules>
 
 </project>
