fix remaining instances (#931)

--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -39,8 +39,8 @@ groups:
     endpoint: instance
   - title: Pulsar on Kubernetes
     endpoint: Kubernetes
-  - title: Pulsar on Google Container Engine
-    endpoint: Kubernetes/#pulsar-on-google-container-engine
+  - title: Pulsar on Google Kubernetes Engine
+    endpoint: Kubernetes/#pulsar-on-google-kubernetes-engine
   - title: Pulsar on AWS
     endpoint: Kubernetes/#pulsar-on-amazon-web-services
   - title: Pulsar on DC/OS
