Initial implementation of Pulsar Function Worker (#47)

--- a/pulsar-functions/conf/example.yml
+++ b/pulsar-functions/conf/example.yml
@@ -18,6 +18,6 @@
 #
 
 tenant: "test"
-nameSpace: "test"
+namespace: "test-namespace"
 name: "example"
 className: "org.apache.pulsar.functions.api.examples.ExclamationFunction"
