--- a/pulsar-functions/conf/log4j.shell.properties
+++ b/pulsar-functions/conf/log4j.shell.properties
@@ -22,7 +22,7 @@
 
 # DEFAULT: console appender only
 # Define some default values that can be overridden by system properties
-bookkeeper.root.logger=ERROR,CONSOLE
+bookkeeper.root.logger=INFO,CONSOLE
 
 log4j.rootLogger=${bookkeeper.root.logger}
 
