Provide an Ansible playbook for AWS with documentation (#920)

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ target/
 
 # Generated website
 generated-site/
+
+# Ansible and Terraform artifacts
+deployment/terraform-ansible/deploy-pulsar.retry
+deployment/terraform-ansible/aws/terraform*
+deployment/terraform-ansible/aws/.terraform/
+deployment/terraform-ansible/aws/.terraform.tfstate.lock.info
