refine broker starter command

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -159,6 +159,12 @@ enablePersistentTopics=true
 # Enable broker to load non-persistent topics
 enableNonPersistentTopics=true
 
+# Enable to run bookie along with broker
+enableRunBookieTogether=false
+
+// Enable to run bookie autorecovery along with broker
+enableRunBookieAutoRecoveryTogether=false
+
 ### --- Authentication --- ###
 
 # Enable TLS
