Organize function packages in hierarchy (#65)
* Add worker main

* Organize function packages in hierarchy

- functions are stored under distributedlog://<zkservers>/pulsar/functions/<tenant>/<namespace>/<function>/<package_name>
- initialize dlog namespace at the startup of worker
- use zookeeperServers in worker config instead of dlogUri to hide dlog from pulsar configuration. make it consistent with broker configuration.

* Addressed comments

--- a/pulsar-functions/conf/example.yml
+++ b/pulsar-functions/conf/example.yml
@@ -21,3 +21,7 @@ tenant: "test"
 namespace: "test-namespace"
 name: "example"
 className: "org.apache.pulsar.functions.api.examples.ExclamationFunction"
+sourceTopic: "persistent://sample/standalone/ns1/test_src"
+sinkTopic: "persistent://sample/standalone/ns1/test_result"
+inputSerdeClassName: "org.apache.pulsar.functions.runtime.serde.Utf8StringSerDe"
+outputSerdeClassName: "org.apache.pulsar.functions.runtime.serde.Utf8StringSerDe"
