--- a/pulsar-functions/conf/function_worker.yml
+++ b/pulsar-functions/conf/function_worker.yml
@@ -17,10 +17,15 @@
 # under the License.
 #
 
-workerId: test-worker
-workerPort: 7654
-zookeeperServers: localhost:1234
+workerId: standalone
+workerPort: 6750
+zookeeperServers: localhost:2181
+functionMetadataTopic: persistent://standalone/sample/ns1/pulsar_functions/metadata
 pulsarServiceUrl: pulsar://localhost:6650
-functionMetadataTopic: test-function-metadata-topic
-numFunctionPackageReplicas: 3
-
+numFunctionPackageReplicas: 1
+downloadDirectory: /tmp/pulsar_functions
+defaultLimits:
+  maxTimeMs: -1
+  maxMemoryMb: -1
+  maxCpuCores: -1
+  maxBufferedTuples: 1024
