--- a/pulsar-functions/runtime/pom.xml
+++ b/pulsar-functions/runtime/pom.xml
@@ -25,7 +25,7 @@
   <properties>
     <jetty.version>9.4.8.v20171121</jetty.version>
     <jersery.version>2.26</jersery.version>
-    <dlog.version>0.6.0-SNAPSHOT</dlog.version>
+    <dlog.version>0.5.0</dlog.version>
     <gson.version>2.8.2</gson.version>
     <jackson.version>2.9.2</jackson.version>
   </properties>
