Upgrade testng and downgrade log4j2 and remove junit (#80)

--- a/pulsar-functions/runtime/src/test/resources/log4j2.yml
+++ b/pulsar-functions/runtime/src/test/resources/log4j2.yml
@@ -28,3 +28,10 @@ Configuration:
       target: SYSTEM_OUT
       PatternLayout:
         Pattern: "%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n"
+
+  Loggers:
+
+    Root:
+      level: info
+      AppenderRef:
+        - ref: Console
