--- a/kubernetes/google-kubernetes-engine/bookie.yaml
+++ b/kubernetes/google-kubernetes-engine/bookie.yaml
@@ -67,6 +67,7 @@ spec:
                     bin/pulsar bookie
                 ports:
                   - containerPort: 3181
+                    hostPort: 3181
                     name: client
                 envFrom:
                   - configMapRef:
