Move worker module out of runtime module (#90)
* Move worker module out of runtime module

* Fix license header issues

--- a/pulsar-functions/pom.xml
+++ b/pulsar-functions/pom.xml
@@ -34,6 +34,7 @@
   <modules>
     <module>api</module>
     <module>runtime</module>
+    <module>worker</module>
     <module>api-examples</module>
     <module>runtime-benchmark</module>
   </modules>
