--- a/pulsar-functions/worker/pom.xml
+++ b/pulsar-functions/worker/pom.xml
@@ -23,7 +23,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <properties>
+    <jetty.version>9.4.8.v20171121</jetty.version>
     <jersery.version>2.26</jersery.version>
+    <dlog.version>0.5.0</dlog.version>
     <gson.version>2.8.2</gson.version>
     <jackson.version>2.9.2</jackson.version>
   </properties>
@@ -34,8 +36,8 @@
     <version>1.22.0-incubating-SNAPSHOT</version>
   </parent>
 
-  <artifactId>pulsar-functions-runtime</artifactId>
-  <name>Pulsar Functions :: Runtime</name>
+  <artifactId>pulsar-functions-worker</artifactId>
+  <name>Pulsar Functions :: Worker</name>
 
   <dependencies>
 
@@ -55,25 +57,7 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>pulsar-common</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>pulsar-client-original</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>pulsar-client-tools</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>pulsar-functions-api</artifactId>
+      <artifactId>pulsar-functions-runtime</artifactId>
       <version>${project.version}</version>
     </dependency>
 
@@ -148,6 +132,26 @@
       <groupId>org.glassfish.jersey.media</groupId>
       <artifactId>jersey-media-multipart</artifactId>
       <version>${jersery.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlet</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.distributedlog</groupId>
+      <artifactId>distributedlog-core</artifactId>
+      <version>${dlog.version}</version>
+      <type>jar</type>
+      <classifier>shaded</classifier>
     </dependency>
 
     <dependency>
