fixing generated dir (#98)

--- a/pulsar-functions/pom.xml
+++ b/pulsar-functions/pom.xml
@@ -32,6 +32,7 @@
   <name>Pulsar Functions :: Parent</name>
 
   <modules>
+    <module>generated</module>
     <module>api</module>
     <module>runtime</module>
     <module>worker</module>
