--- a/kubernetes/google-kubernetes-engine/bookie.stateful.yaml
+++ b/kubernetes/google-kubernetes-engine/bookie.stateful.yaml
@@ -33,18 +33,12 @@ kind: ConfigMap
 metadata:
   name: bookie-config
 data:
-  BK_BOOKIE_EXTRA_OPTS: "\"-Xms1g -Xmx1g -XX:MaxDirectMemorySize=1g -XX:+UseG1GC  -XX:MaxGCPauseMillis=10 -XX:+ParallelRefProcEnabled -XX:+UnlockExperimentalVMOptions -XX:+AggressiveOpts -XX:+DoEscapeAnalysis -XX:ParallelGCThreads=32 -XX:ConcGCThreads=32 -XX:G1NewSizePercent=50 -XX:+DisableExplicitGC -XX:-ResizePLAB\""
-  BK_bookiePort: "3181"
-  BK_journalDirectory: "/bookkeeper/data/journal"
-  BK_ledgerDirectories: "/bookkeeper/data/ledgers"
-  BK_indexDirectories: "/bookkeeper/data/ledgers"
-  BK_zkServers: zookeeper
-  # the default manager is flat, which is not good for supporting large number of ledgers
-  BK_ledgerManagerType: "hierarchical"
-  # TODO: Issue 458: https://github.com/apache/bookkeeper/issues/458
-  #BK_statsProviderClass: org.apache.bookkeeper.stats.prometheus.PrometheusMetricsProvider
-  # use hostname as bookie id for StatefulSets deployment
-  BK_useHostNameAsBookieID: "true"
+  PULSAR_MEM: "\" -Xms4g -Xmx4g -XX:MaxDirectMemorySize=4g\""
+  PULSAR_GC: "\" -XX:+UseG1GC \""
+  dbStorage_writeCacheMaxSizeMb: "1024"
+  dbStorage_readAheadCacheMaxSizeMb: "1024"
+  zkServers: zk-0.zookeeper,zk-1.zookeeper,zk-2.zookeeper
+  statsProviderClass: org.apache.bookkeeper.stats.PrometheusMetricsProvider
 ---
 
 apiVersion: apps/v1beta1
@@ -52,16 +46,17 @@ kind: StatefulSet
 metadata:
   name: bookie
   labels:
-    app: bookkeeper
-    component: bookie
+    app: pulsar
+    component: bookkeeper
 spec:
   serviceName: "bookkeeper"
   replicas: 3
   template:
     metadata:
       labels:
-        app: bookkeeper
-        component: bookie
+        app: pulsar
+        component: bookkeeper
+        cluster: pulsar-gke
       annotations:
         pod.alpha.kubernetes.io/initialized: "true"
         prometheus.io/scrape: "true"
@@ -70,50 +65,52 @@ spec:
       terminationGracePeriodSeconds: 0
       containers:
         - name: bookie
-          image: apache/bookkeeper:latest
-          resources:
-            requests:
-              memory: "3Gi"
-              cpu: "1000m"
-            limits:
-              memory: "5Gi"
-              cpu: "2000m"
-          command: [ "/bin/bash", "/opt/bookkeeper/entrypoint.sh" ]
-          args: ["/opt/bookkeeper/bin/bookkeeper", "bookie"]
+          image: apachepulsar/pulsar:latest
+          command: ["sh", "-c"]
+          args:
+            - >
+              bin/apply-config-from-env.py conf/bookkeeper.conf &&
+              bin/apply-config-from-env.py conf/pulsar_env.sh &&
+              bin/pulsar bookie
           ports:
-            - name: bookie
-              containerPort: 3181
+            - containerPort: 3181
+              hostPort: 3181
+              name: client
+          envFrom:
+            - configMapRef:
+                name: bookie-config
+          env:
+            - name: advertisedAddress
+              valueFrom:
+                fieldRef:
+                    fieldPath: status.hostIP
+          volumeMounts:
+            - name: journal-disk
+              mountPath: /pulsar/data/bookkeeper/journal
+            - name: ledgers-disk
+              mountPath: /pulsar/data/bookkeeper/ledgers
+      initContainers:
+        # The first time, initialize BK metadata in zookeeper
+        # Otherwise ignore error if it's already there
+        - name: bookie-metaformat
+          image: apachepulsar/pulsar:latest
+          command: ["sh", "-c"]
+          args:
+            - >
+              bin/apply-config-from-env.py conf/bookkeeper.conf &&
+              bin/bookkeeper shell metaformat --nonInteractive || true;
           envFrom:
             - configMapRef:
                   name: bookie-config
-          volumeMounts:
-            - name: journaldisk
-              mountPath: /bookkeeper/data/journal
-            - name: ledgersdisk
-              mountPath: /bookkeeper/data/ledgers
 
-  volumeClaimTemplates:
-    - metadata:
-        name: journaldisk
-        labels:
-          component: bookkeeper
-      spec:
-        accessModes: [ "ReadWriteOnce" ]
-        storageClassName: ssd
-        resources:
-          requests:
-            storage: 5Gi
-    - metadata:
-        name: ledgersdisk
-        annotations:
-          volume.alpha.kubernetes.io/storage-class: default
-        labels:
-          component: bookkeeper
-      spec:
-        accessModes: [ "ReadWriteOnce" ]
-        resources:
-          requests:
-            storage: 10Gi
+      volumes:
+          # Mount local disks
+        - name: journal-disk
+          hostPath:
+              path: /mnt/disks/ssd0
+        - name: ledgers-disk
+          hostPath:
+              path: /mnt/disks/ssd1
 ---
 # A headless service to create DNS records
 apiVersion: v1
