--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -22,8 +22,11 @@
 # Zookeeper quorum connection string
 zookeeperServers=
 
-# Global Zookeeper quorum connection string
+# Deprecated. Global Zookeeper quorum connection string
 globalZookeeperServers=
+
+# Global Configuration Zookeeper quorum connection string
+globalConfigurationZookeeperServers=
 
 brokerServicePort=6650
 
