--- a/conf/websocket.conf
+++ b/conf/websocket.conf
@@ -19,13 +19,16 @@
 
 ### --- Web Socket proxy settings --- ###
 
-# Global Zookeeper quorum connection string
+# Deprecated. Global zookeeper quorum connection string
 globalZookeeperServers=
+
+# Global Configuration Zookeeper quorum connection string
+globalConfigurationZookeeperServers=
 
 # Zookeeper session timeout in milliseconds
 zooKeeperSessionTimeoutMillis=30000
 
-# Pulsar cluster url to connect to broker (optional if globalZookeeperServers present)
+# Pulsar cluster url to connect to broker (optional if globalConfigurationZookeeperServers present)
 serviceUrl=
 serviceUrlTls=
 brokerServiceUrl=
