--- a/conf/proxy.conf
+++ b/conf/proxy.conf
@@ -20,8 +20,11 @@
 # Zookeeper quorum connection string (comma-separated)
 zookeeperServers=
 
-# Global zookeeper quorum connection string (comma-separated)
+# Deprecated. Global zookeeper quorum connection string (comma-separated)
 globalZookeeperServers=
+
+# Global Configuration Zookeeper quorum connection string (comma-separated)
+globalConfigurationZookeeperServers=
 
 # ZooKeeper session timeout
 zookeeperSessionTimeoutMs=30000
