--- a/pulsar-client-cpp/test-conf/standalone-ssl.conf
+++ b/pulsar-client-cpp/test-conf/standalone-ssl.conf
@@ -22,8 +22,11 @@
 # Zookeeper quorum connection string
 zookeeperServers=
 
-# Global Zookeeper quorum connection string
+# Deprecated. Global zookeeper quorum connection string
 globalZookeeperServers=
+
+# Global Configuration Zookeeper quorum connection string
+globalConfigurationZookeeperServers=
 
 brokerServicePort=9885
 brokerServicePortTls=9886
