--- a/pulsar-testclient/pom.xml
+++ b/pulsar-testclient/pom.xml
@@ -44,6 +44,7 @@
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
 			<artifactId>zookeeper</artifactId>
+			<version>${zookeeper.version}</version>
 		</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
