Rename generated module to proto module (#102)

--- a/pulsar-functions/pom.xml
+++ b/pulsar-functions/pom.xml
@@ -32,7 +32,7 @@
   <name>Pulsar Functions :: Parent</name>
 
   <modules>
-    <module>generated</module>
+    <module>proto</module>
     <module>api</module>
     <module>runtime</module>
     <module>worker</module>
