--- a/pulsar-functions/worker/pom.xml
+++ b/pulsar-functions/worker/pom.xml
@@ -63,7 +63,7 @@
 
     <dependency>
       <groupId>org.apache.pulsar</groupId>
-      <artifactId>pulsar-functions-generated</artifactId>
+      <artifactId>pulsar-functions-proto</artifactId>
       <version>${project.version}</version>
     </dependency>
 
