specify cluster metadata initialization as a Job rather than Pod

--- a/kubernetes/google-kubernetes-engine/cluster-metadata.yaml
+++ b/kubernetes/google-kubernetes-engine/cluster-metadata.yaml
@@ -1,21 +1,23 @@
-apiVersion: v1
-kind: Pod
+apiVersion: batch/v1
+kind: Job
 metadata:
   name: pulsar-cluster-metadata-init
   labels:
     app: pulsar
     component: broker
-  spec:
-    initContainers:
-      - name: pulsar-init-container
-        image: apachepulsar/pulsar:latest
-        command: ["sh", "-c"]
-        args:
-          - >
-            bin/apply-config-from-env.py conf/broker.conf &&
-            bin/pulsar initialize-cluster-metadata \
+spec:
+  template:
+    spec:
+      containers:
+        - name: pulsar-cluster-metadata-init-container
+          image: apachepulsar/pulsar:latest
+          command: ["sh", "-c"]
+          args:
+            - >
+              bin/pulsar initialize-cluster-metadata \
                 --cluster us-central \
                 --zookeeper zookeeper \
                 --global-zookeeper zookeeper \
                 --web-service-url http://broker.default.svc.cluster.local:8080/ \
                 --broker-service-url pulsar://broker.default.svc.cluster.local:6650/ || true;
+      restartPolicy: Never
