Migrating FunctionConfig, FunctionMetaData, and ServiceRequest to proto (#104)
* Migrating data structures to protobuf

* fixing bugs

* removing unneccessary files

* fixing dependency issues

* fixing wrong dependency

* correct proto files

* fixing issues

* fix worker bug

--- a/pulsar-functions/conf/function_worker.yml
+++ b/pulsar-functions/conf/function_worker.yml
@@ -24,7 +24,7 @@ functionMetadataTopic: persistent://standalone/sample/ns1/pulsar_functions/metad
 pulsarServiceUrl: pulsar://localhost:6650
 numFunctionPackageReplicas: 1
 downloadDirectory: /tmp/pulsar_functions
-defaultLimits:
+limitsConfig:
   maxTimeMs: -1
   maxMemoryMb: -1
   maxCpuCores: -1
